[package]
name = "breadcrumbss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
thirtyfour = "0.30"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
