[package]
name = "breadcrumbss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thirtyfour = "0.25.1"
env_logger = "0.9"
tokio = { version = "1", features = ["full"] }
